<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telainicial_titulo"
            android:textSize="20sp" />

    <Button
            android:id="@+id/buttonChamadaSimples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/telainicial_rotulo_btn_chamada_simples" />
    <Button
            android:id="@+id/buttonChamadaRetorno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/telainicial_rotulo_btn_chamada_com_retorno" />

</androidx.appcompat.widget.LinearLayoutCompat>